--- a/bootcamp-frontend-t-g9-develop/semana-4/index.html
+++ b/bootcamp-frontend-t-g9-develop/semana-4/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Acrostico Neon</title>
-  <link rel="stylesheet" href="./css/index.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Acróstico Neón</title>
+  <link rel="stylesheet" href="./css/index.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap"
-  rel="stylesheet" />
+    rel="stylesheet" />
 </head>
+
 <body class="body">
-  <main class="main">
-    <section class="section">
-<a href="#" class="hero_name">
-  <span class="hero__name-letter" style="--letter:'¡K'">¡K</span>
-  <span class="hero__name-letter" style="--letter:'E'">E</span>
-  <span class="hero__name-letter" style="--letter:'N'">N</span>
-  <span class="hero__name-letter" style="--letter:'N'">N</span>
-  <span class="hero__name-letter" style="--letter:'Y¡'">Y¡</span>
-</a>
+  <main>
+    <section class="hero">
+      <a href="#" class="hero__name">
+        <span class="hero__name-letter" style="--letter: '¡K'">¡K</span>
+        <span class="hero__name-letter" style="--letter: 'El'">E</span>
+        <span class="hero__name-letter" style="--letter: 'N'">N</span>
+        <span class="hero__name-letter" style="--letter: 'N'">N</span>
+        <span class="hero__name-letter" style="--letter: 'Y¡'">Y¡</span>
+         </a>
     </section>
   </main>
 </body>
+
 </html>
